--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,5 @@
-[server]
-enableXsrfProtection = false
-enableCORS = false
+[theme]
+base="light"
+primaryColor="#5854c4"
+secondaryBackgroundColor="#edeffc"
+textColor="#000000"
